Reordenada la estructura del component Flappy-Bird

--- a/paginas/minijuegos/minijuegos.html
+++ b/paginas/minijuegos/minijuegos.html
@@ -69,7 +69,7 @@
         <!-- #region Joc de Transmissió -->
         <div class="card mb-4 box-shadow">
           <div class="card-header">
-            <img class="card-img-top" src="../../img/transmision.PNG" alt="Card image" style="width:100%">
+            <img class="card-img-top" src="./Flappy-Bird/media/transmision.PNG" alt="Card image" style="width:100%">
           </div>    
           <div class="card-body">
             <h2 class="my-0 font-weight-normal">Transmissió</h2>
@@ -79,7 +79,7 @@
               <li>A quanta gent podrás</li>
               <li>transmetre el teu missatge?</li>
             </ul>
-            <button type="button" class="btn btn-lg btn-block btn-primary" onclick="location.href='./flappy.html'">A jugar!</button>
+            <button type="button" class="btn btn-lg btn-block btn-primary" onclick="location.href='./Flappy-Bird/flappy.html'">A jugar!</button>
           </div>
         </div>
           <!-- #endregion -->
