Reorganitzada la pagina d'About US

--- a/paginas/minijuegos/minijuegos.html
+++ b/paginas/minijuegos/minijuegos.html
@@ -37,7 +37,7 @@
           </nav>
           -->
 
-      <a class="btn btn-primary" href="../aboutus.html">Qui Som?</a>
+      <a class="btn btn-primary" href="../about/aboutus.html">Qui Som?</a>
     </div>
 
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
