--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             
           </nav>
 
-      <a class="btn btn-primary" href="./paginas/aboutus.html">Qui Som?</a>
+      <a class="btn btn-primary" href="./paginas/about/aboutus.html">Qui Som?</a>
     </div>
 
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
