--- a/paginas/Prueba_map(4k)/index.html
+++ b/paginas/Prueba_map(4k)/index.html
@@ -13,7 +13,12 @@
     </head>
 <body >
     <div class="container">
-        <img src="recursos\back.png" style="float: left">
+        <img src="recursos\back.png" onclick="goBack()" style="float: left">
+        <script>
+                function goBack() {
+                  window.history.back();
+                }
+              </script>
         <div id="world-map" style="width: 2184px; height: 1315px; margin: 0 auto"></div>       
         <h1 id="name" align="center" style="width: 2184px; margin: 0 auto;height: 125px;  font-size: 50px;"></h1>
         
