--- a/paginas/minijuegos/minijuegos.html
+++ b/paginas/minijuegos/minijuegos.html
@@ -95,7 +95,7 @@
               <li> a</li>
               <li> a</li>
             </ul>
-            <button type="button" class="btn btn-lg btn-block btn-primary">A jugar!</button>
+            <button type="button" class="btn btn-lg btn-block btn-primary" onclick="location.href='./Prueba_juego/index.php'" >A jugar!</button>
           </div>
           <!-- #endregion -->
         </div>
