--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <li>15 GB of storage</li>
               <li>Help center access</li>
             </ul>
-            <button type="button" class="btn btn-lg btn-block btn-primary">Aprende!</button>
+            <button type="button" class="btn btn-lg btn-block btn-primary" onclick="location.href='./paginas/presentacion/presentacion.html'">Aprende!</button>
           </div>
         </div>
       </div>
