Afegida miniatura corresponent al joc de recepció

--- a/paginas/minijuegos/minijuegos.html
+++ b/paginas/minijuegos/minijuegos.html
@@ -58,8 +58,8 @@
             <h2 class="my-0 font-weight-normal">Emissió</h2>
             <ul class="list-unstyled mt-3 mb-4">
               <li>Joc de memòria. </li>
-              <li>Podrás conseguir tots  </li>
-              <li>els elements la radio?!</li>
+              <li>Podrás aconseguir tots</li>
+              <li>els elements la radio?</li>
             </ul>
             <button type="button" class="btn btn-lg btn-block btn-primary" onclick="location.href='./PRO-Memory/index.html'" >A jugar!</button>
           </div>
@@ -86,14 +86,14 @@
         <!-- #region Joc de Recepció -->
         <div class="card mb-4 box-shadow">
           <div class="card-header">
-            <img class="card-img-top" src="../../img/radio.PNG" alt="Card image" style="width:100%">
+            <img class="card-img-top" src="../minijuegos/Prueba_juego/img/miniatura.png" alt="Card image" style="width:100%">
           </div>    
           <div class="card-body">
             <h2 class="my-0 font-weight-normal">Recepció</h2>
             <ul class="list-unstyled mt-3 mb-4">
-              <li> a</li>
-              <li> a</li>
-              <li> a</li>
+              <li>Joc de memòria. </li>
+              <li>Podrás conectar tots  </li>
+              <li>els elements?</li>
             </ul>
             <button type="button" class="btn btn-lg btn-block btn-primary" onclick="location.href='./Prueba_juego/index.php'" >A jugar!</button>
           </div>
