--- a/paginas/presentacion/presentacion.html
+++ b/paginas/presentacion/presentacion.html
@@ -7,20 +7,55 @@
   <body>
     <div class="slideshow-container">
       <div class="mySlides fade">
-        <div class="numbertext">1 / 3</div>
+        <div class="numbertext"></div>
         <img src="img/emisio.png" style="width:100%" />
         <div class="text">Caption Text</div>
       </div>
 
       <div class="mySlides fade">
-        <div class="numbertext">2 / 3</div>
+        <div class="numbertext"></div>
         <img src="img/recepcio.png" style="width:100%" />
         <div class="text">Caption Two</div>
       </div>
 
       <div class="mySlides fade">
-        <div class="numbertext">3 / 3</div>
-        <img src="img/recepcio.png" style="width:100%" />
+        <div class="numbertext"></div>
+        <img src="img/all0.png" style="width:100%" />
+        <div class="text">Caption Three</div>
+      </div>
+      <div class="mySlides fade">
+        <div class="numbertext"></div>
+        <img src="img/all1.png" style="width:100%" />
+        <div class="text">Caption Three</div>
+      </div>
+      <div class="mySlides fade">
+        <div class="numbertext"></div>
+        <img src="img/all2.png" style="width:100%" />
+        <div class="text">Caption Three</div>
+      </div>
+      <div class="mySlides fade">
+        <div class="numbertext"></div>
+        <img src="img/all3.png" style="width:100%" />
+        <div class="text">Caption Three</div>
+      </div>
+      <div class="mySlides fade">
+        <div class="numbertext"></div>
+        <img src="img/all4.png" style="width:100%" />
+        <div class="text">Caption Three</div>
+      </div>
+      <div class="mySlides fade">
+        <div class="numbertext"></div>
+        <img src="img/all5.png" style="width:100%" />
+        <div class="text">Caption Three</div>
+      </div>
+      <div class="mySlides fade">
+        <div class="numbertext"></div>
+        <img src="img/all6.png" style="width:100%" />
+        <div class="text">Caption Three</div>
+      </div>
+      <div class="mySlides fade">
+        <div class="numbertext"></div>
+        <img src="img/all7.png" style="width:100%" />
         <div class="text">Caption Three</div>
       </div>
 
