Creat el fitxer de datos del memory

--- a/paginas/minijuegos/PRO-Memory/index.html
+++ b/paginas/minijuegos/PRO-Memory/index.html
@@ -15,6 +15,7 @@
       <div id="escenari"></div>
     </div>
   </body>
+  <script src="js/datos.js"></script>
   <script src="js/index.js"></script>
   <table>
     <td id="foto"></th>
