--- a/temp_BACKUP/index.html
+++ b/temp_BACKUP/index.html
@@ -30,12 +30,7 @@
 
       <a class="btn btn-primary" href="./paginas/about/aboutus.html">Qui Som?</a>
     </div>
-
-    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-      <h1 class="display-4 text-white">  </h1>
-      <p class="lead"></p>
-    </div>
-
+    <!-- Elements de -->
     <div class="container">
       <div class="card-deck mb-3 text-center">
         <div class="card mb-4 box-shadow">
