--- a/paginas/minijuegos/PRO-Memory/index.html
+++ b/paginas/minijuegos/PRO-Memory/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/miCSS.css" />
+    <link rel="stylesheet" href="./css/miCSS.css" />
     <title>Memory Vitaminat</title>
   </head>
   <body>
@@ -15,8 +15,8 @@
       <div id="escenari"></div>
     </div>
   </body>
-  <script src="js/datos.js"></script>
-  <script src="js/index.js"></script>
+  <script src="./js/datos.js"></script>
+  <script src="./js/index.js"></script>
   <table>
     <td id="foto"></th>
     <td id="text"></th>
