--- a/paginas/about/aboutus.html
+++ b/paginas/about/aboutus.html
@@ -1,83 +1,73 @@
-<html lang="cat">
+<html>
   <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-
-    <title>La radio</title>
-
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <link
-      rel="canonical"
-      href="https://getbootstrap.com/docs/4.0/examples/pricing/"
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
     />
 
-    <!-- Bootstrap core CSS -->
-    <link href="../../css/micss.css" rel="stylesheet" />
-
-    <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="./css/aboutcss.css" />
-    <link href="../../css/pricing.css" rel="stylesheet" />
+    <link href="./../../css/micss.css" rel="stylesheet" />
+    <title>Sobre Nosaltres</title>
   </head>
 
-  <body id="fondo">
-    <div
-      class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 border-bottom box-shadow"
-      id="partearriba"
-    >
-      <h5
-        class="my-0 mr-md-auto font-weight-normal"
-        onclick="goBack()"
-        style="cursor: pointer"
-      >
-        Museu Mnactec
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <h5 class="mr-auto ml-3 ">
+        <a class="titol btn" href="./../../index.html">
+          Museu MNACTEC
+        </a>
       </h5>
 
-      <script>
-        function goBack() {
-          window.history.back();
-        }
-      </script>
-    </div>
-
-    <div class="px-3 py-3 pt-md-5 pb-md-4 text-center">
-      <h5 class="text-white">
-        Som un grup d'estudiants del Centre D'estudis Politecnics , <br />
+      <!-- TODO posar els inputs de tipus botó i fer que el fondo sigui la imatge
+        <div class="text-center">
+            <input type="image" src="./img/espana.png" />
+            <input type="image" src="./img/english.png" onclick="location.href='./paginas/index.en.html'" />
+            <input type="image" src="./img/catalan.png" onclick="location.href='./paginas/index.cat.html'" />
+        </div>-->
+      <div class="mt-3 mb-3">
+        <a class="btn btn-primary mr-3 titol right" href="./aboutus.html"
+          >Qui Som?</a
+        >
+      </div>
+    </nav>
+    <div class=" mt-4 mb-4 text-center">
+      <h5 class="contingut text-white">
+        Som un grup d'estudiants del Centre D'estudis Politecnics<br />
         que estem cursant el grau superior de Desenvolupament d'Aplicacions Web.
       </h5>
     </div>
 
-    <div class="container">
-      <div class="card-group">
-        <div id="carta" class="card">
+    <div class="container col-10">
+      <div class="card-deck mb-3 text-center">
+        <div class="card">
           <img src="./img/pau.png" class="card-img-top" alt="..." />
           <div class="card-body">
-            <h5 class="card-title text-white">Pau Gonzalez</h5>
-            <p class="card-text">
+            <h5 class="titol text-white">Pau Gonzalez</h5>
+            <p class="contingut">
               This is a wider card with supporting text below as a natural
               lead-in to additional content. This content is a little bit
               longer.
             </p>
           </div>
         </div>
-        <div id="carta" class="card">
+        <div class="card">
           <img src="./img/jorge.png" class="card-img-top" alt="..." />
           <div class="card-body">
-            <h5 class="card-title text-white">Jorge Sereno</h5>
-            <p class="card-text">
+            <h5 class="titol text-white">Jorge Sereno</h5>
+            <p class="contingut">
               This card has supporting text below as a natural lead-in to
               additional content.
             </p>
           </div>
         </div>
-        <div id="carta" class="card">
+        <div class="card">
           <img src="./img/edu.png" class="card-img-top" alt="Eduard Gomà" />
           <div class="card-body">
-            <h5 class="card-title text-white">Eduard Gomà</h5>
-            <p class="card-text">
+            <h5 class="titol text-white">Eduard Gomà</h5>
+            <p class="contingut">
               This is a as a to show that equal height action.
             </p>
           </div>
