--- a/paginas/minijuegos/minijuegos.html
+++ b/paginas/minijuegos/minijuegos.html
@@ -1,10 +1,35 @@
-<?php include './../../plantilla_base.php' ?>
+<html>
 
-<?php startblock('capcelera') ?>
-<title>Sobre Nosaltres</title>
-<?php endblock() ?>
-<?php startblock('principal') ?>
-<div class="container col-10 mt-5">
+<head>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <link href="./../../css/micss.css" rel="stylesheet">
+    <title>Els nostres jocs</title>
+
+
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <h5 class="mr-auto ml-3 ">
+            <a class="titol btn" href="./../../index.html">
+                Museu MNACTEC
+            </a>
+        </h5>
+
+        <!-- TODO posar els inputs de tipus botó i fer que el fondo sigui la imatge
+        <div class="text-center">
+            <input type="image" src="./img/espana.png" />
+            <input type="image" src="./img/english.png" onclick="location.href='./paginas/index.en.html'" />
+            <input type="image" src="./img/catalan.png" onclick="location.href='./paginas/index.cat.html'" />
+        </div>-->
+        <div class="mt-3 mb-3">
+            <a class="btn btn-primary mr-3 titol right" href="./../about/aboutus.html">Qui Som?</a>
+        </div>
+    </nav>
+    <div class="container col-10 mt-5">
     <div class="card-deck mb-3 text-center">
         <!--#region Joc de Emissió -->
 
@@ -43,7 +68,7 @@
         <!-- #region Joc de Recepció -->
         <div class="card ">
             <div class="card-header">
-                <img class="card-img-top" src="../minijuegos/Prueba_juego/img/miniatura.png" alt="Card image" style="width:100%">
+                <img class="card-img-top" src="./Prueba_juego/img/miniatura.png" alt="Card image" style="width:100%">
             </div>
             <div class="card-body">
                 <h2 class="titol">Recepció</h2>
@@ -52,10 +77,11 @@
                         Podrás conectar tots <br>
                         els elements?</li>
                 </ul>
-                <button type="button" class="btn btn-lg btn-block btn-primary" onclick="location.href='./Prueba_juego/index.php'">A jugar!</button>
+                <button type="button" class="btn btn-lg btn-block btn-primary" onclick="location.href='./Prueba_juego/index.html'">A jugar!</button>
             </div>
             <!-- #endregion -->
         </div>
     </div>
+</body>
 
-    <?php endblock() ?>
+</html>
